--- a/pages/8165.html
+++ b/pages/8165.html
@@ -290,13 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> |
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> |
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4054/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4054/#Item_5" rel="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -686,7 +684,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='theorems'>Theorems</h2>
+<h2 id='Theorems'>Theorems</h2>
 
 <h3 id='states_and_observables'>States and observables</h3>
 
@@ -1248,7 +1246,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -1317,7 +1315,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#HierarchyProblem'>Hierarchy (non-)problem</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em><math class='maruku-mathml' display='inline' id='mathml_09705c9e31a941676e06e162bfa29282569a25ca_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-MSSM</em> is an <a class='existingWikiWord' href='/nlab/show/MSSM'>MSSM</a> <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>model (in particle physics)</a> motivated from <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>KK-compactification</a> of <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> on a 7-dimensional singular <a class='existingWikiWord' href='/nlab/show/G2+manifold'>G2-manifold</a>, hence a model in <a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a> based on <a class='existingWikiWord' href='/nlab/show/M-theory+on+G2-manifolds'>M-theory on G2-manifolds</a>.</p>
+<p>The <em><math class='maruku-mathml' display='inline' id='mathml_093aa3e67a9c6c69f742bc61cfb36f3b138a2054_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-MSSM</em> is an <a class='existingWikiWord' href='/nlab/show/MSSM'>MSSM</a> <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>model (in particle physics)</a> motivated from <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>KK-compactification</a> of <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> on a 7-dimensional singular <a class='existingWikiWord' href='/nlab/show/G2+manifold'>G2-manifold</a>, hence a model in <a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a> based on <a class='existingWikiWord' href='/nlab/show/M-theory+on+G2-manifolds'>M-theory on G2-manifolds</a>.</p>
 
 <p>The G2-MSSM is derived in the context of <a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective</a> <a class='existingWikiWord' href='/nlab/show/4-dimensional+supergravity'>N=1 D=4 supergravity</a>. The model is not based on a specific example of a <a class='existingWikiWord' href='/nlab/show/G2+manifold'>G2 manifold</a> but rather, it relies on the most general known properties of <a class='existingWikiWord' href='/nlab/show/M-theory+on+G2-manifolds'>G2 compactifications of M-theory</a>. For example, the Kähler potential is taken to be of the most general form consistent with <a class='existingWikiWord' href='/nlab/show/G2'>G2</a> <a class='existingWikiWord' href='/nlab/show/holonomy'>holonomy</a>.</p>
 
@@ -1327,7 +1325,7 @@ margin-left: 0em;
 
 <p><strong>Axiverse.</strong> Another crucial feature that distinguishes the G2-MSSM from other known scenarios is the exponentially large split between masses of the geometric moduli and their <a class='existingWikiWord' href='/nlab/show/axion'>axionic</a> partners once the moduli are stabilized. This happens because the two dominant terms in the superpotential depend only on a single linear combination of all the moduli. This linear combination represents the volume of an associative three-cycle that supports the <a class='existingWikiWord' href='/nlab/show/hidden+sector'>hidden sector</a> <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>non-Abelian gauge theory</a>, which is taken to be <a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+duality'>Poincaré dual</a> (up to a positive real number) to the <a class='existingWikiWord' href='/nlab/show/associative+3-form'>co-associative 4-form</a> of the <a class='existingWikiWord' href='/nlab/show/G2+manifold'>G2-manifold</a>. Therefore, the model not only provides a natural <a class='existingWikiWord' href='/nlab/show/QCD'>QCD</a> <a class='existingWikiWord' href='/nlab/show/axion'>axion</a> candidate, but also explicitly realizes the <a href='axion#StringyAxionPhenomenology'>String Axiverse scenario</a> proposed by <a href='axion#ADDKM09'>Arvanitaki et.al. 09</a>. Incidentally, this very feature of the superpotential ultimately explains the absence of large CP-violating phases in the <a class='existingWikiWord' href='/nlab/show/soft+supersymmetry+breaking+term'>soft supersymmetry breaking terms</a>.</p>
 
-<p><strong>Slightly split supesymmetry.</strong> Another distinctive feature of the G2-MSSM is a <a class='existingWikiWord' href='/nlab/show/split+supersymmetry'>slightly split spectrum of superpartners</a>. The <a class='existingWikiWord' href='/nlab/show/gaugino'>gaugino</a> masses are suppressed relative to the <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> mass by a factor of <math class='maruku-mathml' display='inline' id='mathml_09705c9e31a941676e06e162bfa29282569a25ca_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi><mo stretchy='false'>(</mo><mn>60</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{O}(60)</annotation></semantics></math> due to the dynamics of the <a class='existingWikiWord' href='/nlab/show/moduli+stabilization'>moduli stabilization</a>. On the other hand, the scalar masses and the trilinear couplings are as heavy as the <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> mass. The <a class='existingWikiWord' href='/nlab/show/higgsino'>higgsinos</a> may or may not be suppressed relative to the gravitino mass depending on the details of the solution to the <a class='existingWikiWord' href='/nlab/show/doublet-triplet+splitting+problem'>doublet-triplet splitting problem</a>.</p>
+<p><strong>Slightly split supesymmetry.</strong> Another distinctive feature of the G2-MSSM is a <a class='existingWikiWord' href='/nlab/show/split+supersymmetry'>slightly split spectrum of superpartners</a>. The <a class='existingWikiWord' href='/nlab/show/gaugino'>gaugino</a> masses are suppressed relative to the <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> mass by a factor of <math class='maruku-mathml' display='inline' id='mathml_093aa3e67a9c6c69f742bc61cfb36f3b138a2054_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi><mo stretchy='false'>(</mo><mn>60</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{O}(60)</annotation></semantics></math> due to the dynamics of the <a class='existingWikiWord' href='/nlab/show/moduli+stabilization'>moduli stabilization</a>. On the other hand, the scalar masses and the trilinear couplings are as heavy as the <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> mass. The <a class='existingWikiWord' href='/nlab/show/higgsino'>higgsinos</a> may or may not be suppressed relative to the gravitino mass depending on the details of the solution to the <a class='existingWikiWord' href='/nlab/show/doublet-triplet+splitting+problem'>doublet-triplet splitting problem</a>.</p>
 
 <p>Apart from the very specific form of the <a class='existingWikiWord' href='/nlab/show/soft+supersymmetry+breaking+term'>soft supersymmetry breaking terms</a>, the difference between the G2-MSSM and a generic <a class='existingWikiWord' href='/nlab/show/bottom-up+and+top-down+model+building'>bottom-up</a> <a class='existingWikiWord' href='/nlab/show/split+supersymmetry'>Split Supersymmetry</a> scenario is that in <a class='existingWikiWord' href='/nlab/show/split+supersymmetry'>Split SUSY</a> both <a class='existingWikiWord' href='/nlab/show/gaugino'>gaugino</a> masses and trilinear couplings are <a class='existingWikiWord' href='/nlab/show/protection+from+quantum+corrections'>protected</a> by an <a class='existingWikiWord' href='/nlab/show/R-symmetry'>R-symmetry</a> and therefore remain light, while the scalar masses can be as heavy as the <a class='existingWikiWord' href='/nlab/show/GUT'>GUT</a> <a class='existingWikiWord' href='/nlab/show/scale+transformation'>scale</a>.</p>
 
@@ -1366,14 +1364,14 @@ margin-left: 0em;
 <p>A comprehensive account is in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Bobby+Acharya'>Bobby Acharya</a>, Konstantin Bobkov, <a class='existingWikiWord' href='/nlab/show/Gordon+Kane'>Gordon Kane</a>, <a class='existingWikiWord' href='/nlab/show/Piyush+Kumar'>Piyush Kumar</a>, Jing Shao, <em>The <math class='maruku-mathml' display='inline' id='mathml_09705c9e31a941676e06e162bfa29282569a25ca_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-MSSM - An <math class='maruku-mathml' display='inline' id='mathml_09705c9e31a941676e06e162bfa29282569a25ca_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math> Theory motivated model of Particle Physics</em> (<a href='http://arxiv.org/abs/0801.0478'>arXiv:0801.0478</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Bobby+Acharya'>Bobby Acharya</a>, Konstantin Bobkov, <a class='existingWikiWord' href='/nlab/show/Gordon+Kane'>Gordon Kane</a>, <a class='existingWikiWord' href='/nlab/show/Piyush+Kumar'>Piyush Kumar</a>, Jing Shao, <em>The <math class='maruku-mathml' display='inline' id='mathml_093aa3e67a9c6c69f742bc61cfb36f3b138a2054_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-MSSM - An <math class='maruku-mathml' display='inline' id='mathml_093aa3e67a9c6c69f742bc61cfb36f3b138a2054_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math> Theory motivated model of Particle Physics</em> (<a href='http://arxiv.org/abs/0801.0478'>arXiv:0801.0478</a>)</li>
 </ul>
 
 <p>Original articles include</p>
 
 <ul>
 <li id='AcharyaWitten01'>
-<p><a class='existingWikiWord' href='/nlab/show/Bobby+Acharya'>Bobby Acharya</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Chiral Fermions from Manifolds of <math class='maruku-mathml' display='inline' id='mathml_09705c9e31a941676e06e162bfa29282569a25ca_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math> Holonomy</em> (<a href='http://arxiv.org/abs/hep-th/0109152'>arXiv:hep-th/0109152</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Bobby+Acharya'>Bobby Acharya</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Chiral Fermions from Manifolds of <math class='maruku-mathml' display='inline' id='mathml_093aa3e67a9c6c69f742bc61cfb36f3b138a2054_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math> Holonomy</em> (<a href='http://arxiv.org/abs/hep-th/0109152'>arXiv:hep-th/0109152</a>)</p>
 </li>
 
 <li>
@@ -1385,7 +1383,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Bobby+Acharya'>Bobby Acharya</a>, Konstantin Bobkov, <em>Kähler Independence of the <math class='maruku-mathml' display='inline' id='mathml_09705c9e31a941676e06e162bfa29282569a25ca_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-MSSM</em>, JHEP (<a href='http://arxiv.org/abs/0810.3285'>arXiv:0810.3285</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Bobby+Acharya'>Bobby Acharya</a>, Konstantin Bobkov, <em>Kähler Independence of the <math class='maruku-mathml' display='inline' id='mathml_093aa3e67a9c6c69f742bc61cfb36f3b138a2054_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-MSSM</em>, JHEP (<a href='http://arxiv.org/abs/0810.3285'>arXiv:0810.3285</a>)</p>
 </li>
 </ul>
 
@@ -1411,23 +1409,30 @@ margin-left: 0em;
 
 <p>(a useful informed comment is <a href='http://www.math.columbia.edu/~woit/wordpress/?p=4262&amp;cpage=1#comment-101525'>here</a>)</p>
 
-<p>More recent predictions are in</p>
+<p>More discussion of experimental signatures is in</p>
 
 <ul>
-<li id='EllisKaneZheng014'>Sebastian A.R. Ellis, <a class='existingWikiWord' href='/nlab/show/Gordon+Kane'>Gordon Kane</a>, Bob Zheng, <em>Superpartners at LHC and Future Colliders: Predictions from Constrained Compactified M-Theory</em> (<a href='http://arxiv.org/abs/1408.1961'>arXiv:1408.1961</a>)</li>
+<li id='EllisKaneZheng014'>
+<p>Sebastian A.R. Ellis, <a class='existingWikiWord' href='/nlab/show/Gordon+Kane'>Gordon Kane</a>, Bob Zheng, <em>Superpartners at LHC and Future Colliders: Predictions from Constrained Compactified M-Theory</em> (<a href='http://arxiv.org/abs/1408.1961'>arXiv:1408.1961</a>)</p>
+</li>
+
+<li id='BuschmannGonzalesKane18'>
+<p>Malte Buschmann, Eric Gonzalez, <a class='existingWikiWord' href='/nlab/show/Gordon+Kane'>Gordon Kane</a>, <em>Revisiting Gluinos at LHC</em> (<a href='https://arxiv.org/abs/1803.04394'>arXiv:1803.04394</a>)</p>
+</li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on April  4, 2018 08:56:49
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.90.187)
+  <p>
+  Last revised on May 25, 2018 at 08:40:15.
+  See the <a href="https://ncatlab.org/nlab/history/G2-MSSM" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/G2-MSSM" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/G2-MSSM/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/G2-MSSM" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/G2-MSSM" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-
+  <a href="/nlab/edit/G2-MSSM" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/G2-MSSM/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/G2-MSSM" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/G2-MSSM" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/G2-MSSM/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
     <a href="/nlab/print/G2-MSSM" accesskey="p" id="view_print" rel="nofollow">Print</a>
