--- a/pages/9907.html
+++ b/pages/9907.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -358,6 +357,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/quark'>quark</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/top+quark'>top quark</a></li>
+</ul>
 </li>
 
 <li>
@@ -730,8 +733,16 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
+<p>Experimental exclusion as of 2017</p>
+
 <ul>
 <li id='ParticleDataGroup17'><a href='http://pdg.lbl.gov/'>Particle Data Group Review 2017</a>, 113. <em>Supersymmetry , part II (experiment)</em> (<a href='http://pdg.lbl.gov/2017/reviews/rpp2017-rev-susy-2-experiment.pdf'>pdf</a>)</li>
+</ul>
+
+<p>Discussion of remaining possibilities from the point of view of the <a class='existingWikiWord' href='/nlab/show/G2-MSSM'>G2-MSSM</a>:</p>
+
+<ul>
+<li id='BuschmannGonzalesKane18'>Malte Buschmann, Eric Gonzalez, <a class='existingWikiWord' href='/nlab/show/Gordon+Kane'>Gordon Kane</a>, <em>Revisiting Gluinos at LHC</em> (<a href='https://arxiv.org/abs/1803.04394'>arXiv:1803.04394</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -745,19 +756,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 22, 2018 04:34:26 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (91.230.41.202)
+  <p>
+  Last revised on May 25, 2018 at 08:42:03.
+  See the <a href="https://ncatlab.org/nlab/history/gluino" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/gluino" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gluino/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/gluino" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gluino" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/gluino" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gluino/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/gluino" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gluino" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/gluino/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/gluino" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/gluino" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/gluino" id="view_source" rel="nofollow">Source</a>
