--- a/pages/4763.html
+++ b/pages/4763.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1847/#Item_9" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -315,6 +314,8 @@ margin-left: 0em;
 <p>The <em>Feynman transform</em> is an operation on the category of twisted <a class='existingWikiWord' href='/nlab/show/modular+operad'>modular operad</a>s. It gives a way to parametrize various versions of the Kontsevich’s <a class='existingWikiWord' href='/nlab/show/graph+homology'>graph complex</a>, by various <a class='existingWikiWord' href='/nlab/show/modular+operad'>modular operad</a>s. Every modular operad is in particular <a class='existingWikiWord' href='/nlab/show/cyclic+operad'>cyclic</a> (some say “symplectic”). The Feynman transform, up to a shift, reduces to the <span class='newWikiWord'>cobar operad<a href='/nlab/new/cobar+operad'>?</a></span> of the underlying cyclic operad.</p>
 
 <p>The name “Feynman transform” is due to <a class='existingWikiWord' href='/nlab/show/Ezra+Getzler'>Getzler</a> and <a class='existingWikiWord' href='/nlab/show/Mikhail+Kapranov'>Kapranov</a>.</p>
+
+<p>R. Kaufmann and B. C. Ward have introduced <span class='newWikiWord'>Feynman categories<a href='/nlab/new/Feynman+categories'>?</a></span>. Utilizing the pushforward functors defined using left Kan extensions, they define the bar and cobar constructions in the setup of Ab-enriched Feynman categories with some additional structure; assuming certain duality for categories of chain complexes over the coefficient additive category they define Feynman transform as composition of a (co)bar and duality. See Definition 7.11 in their paper Feynman categories arXiv:1312.1269.</p>
 
 <h2 id='literature'>Literature</h2>
 
@@ -336,19 +337,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 16, 2010 19:04:27 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (64.89.61.88)
+  <p>
+  Last revised on May 27, 2018 at 18:07:43.
+  See the <a href="https://ncatlab.org/nlab/history/Feynman transform" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Feynman+transform" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Feynman+transform/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Feynman+transform" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Feynman+transform" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Feynman+transform" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Feynman+transform/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Feynman+transform" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Feynman+transform" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Feynman transform/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Feynman+transform" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Feynman+transform" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Feynman+transform" id="view_source" rel="nofollow">Source</a>
