--- a/pages/11578.html
+++ b/pages/11578.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5913/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,31 +307,38 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>The title refers to a document ‘La Longue Marche à travers la Théorie de Galois” by <a class='existingWikiWord' href='/nlab/show/Alexander+Grothendieck'>Alexander Grothendieck</a>. He wrote the ‘Long March’ between January and June 1981. It consists of about 1600 manuscript pages, and nearly as much again in various addenda and developments. The central objects considered in the <em>Long March</em> are the moduli spaces of Riemann surfaces of genus <math class='maruku-mathml' display='inline' id='mathml_b91455f71901abf1e5ca7d4234ac18832a168b91_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi></mrow><annotation encoding='application/x-tex'>g</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_b91455f71901abf1e5ca7d4234ac18832a168b91_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> marked points.</p>
+    <p>The title refers to a document ‘La Longue Marche à travers la Théorie de Galois“ by <a class='existingWikiWord' href='/nlab/show/Alexander+Grothendieck'>Alexander Grothendieck</a>. He wrote the ‘Long March’ between January and June 1981. It consists of about 1600 manuscript pages, and nearly as much again in various addenda and developments. The central objects considered in the <em>Long March</em> are the moduli spaces of Riemann surfaces of genus <math class='maruku-mathml' display='inline' id='mathml_74b80ae533e0474afad0a95fc63075c0879dc098_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi></mrow><annotation encoding='application/x-tex'>g</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_74b80ae533e0474afad0a95fc63075c0879dc098_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> marked points.</p>
 
 <p>(For the moment, this entry is a ‘stub’ and the topic is discussed in a bit more detail in a subentry to <a class='existingWikiWord' href='/nlab/show/Galois+theory'>Galois theory</a>, although that directs here!)</p>
 
 <ul>
-<li><a href='http://www.math.jussieu.fr/~leila/SchnepsLM.pdf'>Article by Leila Schneps</a></li>
+<li>
+<p><a href='http://www.math.jussieu.fr/~leila/SchnepsLM.pdf'>Article by Leila Schneps</a></p>
+</li>
+
+<li>
+<p>Project of transcription of <a href='https://github.com/gcarmonamateo/LaLongueMarche'>La “Longue Marche”</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/reference'>reference</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on May  1, 2014 04:29:54 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (98.16.169.231)
+  <p>
+  Last revised on May 28, 2018 at 09:14:19.
+  See the <a href="https://ncatlab.org/nlab/history/Long March" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Long+March" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Long+March/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Long+March" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Long+March" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Long+March" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Long+March/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Long+March" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Long+March" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Long March/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Long+March" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Long+March" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Long+March" id="view_source" rel="nofollow">Source</a>
